version/0.11/_sources/examples/preprocessor/doc_download_case.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\preprocessor\doc_download_case.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_preprocessor_doc_download_case.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_preprocessor_doc_download_case.py:


Download a PyAnsys - Heart compatible case from Zenodo.
-------------------------------------------------------
This example shows you how to download a Strocchi 2020 or Rodero 2021 case from the Zenodo
database.

.. GENERATED FROM PYTHON SOURCE LINES 30-53

.. code-block:: Python


    # Perform the required imports
    # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    # Import the required modules and set relevant paths, including that of the working
    # directory and generated model.

    import glob
    from pathlib import Path

    from ansys.heart.core.utils.download import download_case_from_zenodo, unpack_case

    # Download the tar file of Rodero2021 from the Zenodo database.
    download_dir = Path.home() / "pyansys-heart" / "downloads"
    tar_file = download_case_from_zenodo("Rodero2021", 1, download_dir)

    # Unpack the tar file and get the path to the input .vtk/.case file.
    path = unpack_case(tar_file)

    print(path)

    # list all files
    glob.glob("downloads" + "/**/*.*", recursive=True)


.. GENERATED FROM PYTHON SOURCE LINES 54-63

.. note::
   You can also manually download the .case or .vtk files from the Strocchi2020
   and Rodero2021 databases first. See:

   - https://zenodo.org/records/3890034
   - https://zenodo.org/records/4590294

   Alternatively you can make use of the download
   module instead. See the example below.


.. _sphx_glr_download_examples_preprocessor_doc_download_case.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: doc_download_case.ipynb <doc_download_case.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: doc_download_case.py <doc_download_case.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: doc_download_case.zip <doc_download_case.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
